templates/applications/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: arel
spec:
  selector:
    istio: setup
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "arel.raidrin.com"
---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-routes
  namespace: arel
spec:
  hosts:
    - "arel.raidrin.com"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 3000
